--- a/BuddhaBowls/MainWindow.xaml
+++ b/BuddhaBowls/MainWindow.xaml
@@ -1,25 +1,65 @@
-﻿<Window x:Class="BuddhaBowls.MainWindow"
+﻿<Controls:MetroWindow x:Class="BuddhaBowls.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:BuddhaBowls"
+        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         mc:Ignorable="d"
-        Title="Buddha Bowls App Name TBD" Height="350" Width="525">
+        BorderBrush="{DynamicResource AccentColorBrush}"
+        BorderThickness="1"
+        WindowStartupLocation="CenterScreen"
+        Title="Buddha Bowls App Name TBD" Height="500" Width="800">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
-        </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*" />
-                <ColumnDefinition Width="2*" />
-            </Grid.ColumnDefinitions>
-            <TextBox x:Name="textBox" HorizontalAlignment="Right" Height="25" Margin="10" TextWrapping="NoWrap" Text="{Binding DataFileFolder}" VerticalAlignment="Center" Width="180" />
-            <Button x:Name="button" Content="Browse..." Grid.Column="1" HorizontalAlignment="Left" Margin="10" VerticalAlignment="Center" Height="25" Width="75" Command="{Binding BrowseButtonCommand}"/>
-            <Label x:Name="label" Content="Path to data files: " HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="10" VerticalAlignment="Center"/>
-        </Grid>
-        <Button x:Name="button1" Content="Generate Report" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Height="25" Width="125" Command="{Binding ReportCommand}"/>
+        <TabControl Name="Tabs">
+            <TabItem Header="Invetory Items">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="60" />
+                        <RowDefinition Height="60" />
+                        <RowDefinition Height="30" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <TextBlock x:Name="textBlock" Grid.Row="0" Margin="0" Text="Inventory Items" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30"/>
+                    <TextBox x:Name="FilterItemBox" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="25"  Width="200" Controls:TextBoxHelper.Watermark="Filter by item name..." TextChanged="FilterItems_TextChanged" />
+                    <Label x:Name="label1" Grid.Row="1" Content="Inventory Item Name:" Margin="-330, 0, 0, 0" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
+                    <Label Content="Name" Grid.Row="2" />
+                    <Button Grid.Row="2" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" Margin="0, 0, 35, 0" Command="{Binding AddInventoryItemCommand}">
+                        <iconPacks:PackIconFontAwesome Kind="Plus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                    </Button>
+                    <Button Grid.Row="2" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" Margin="0, 0, 5, 0" Command="{Binding DeleteInventoryItemCommand}">
+                        <iconPacks:PackIconFontAwesome Grid.Row="2" Kind="Minus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                    </Button>
+                    <Button x:Name="button2" Content="Edit" HorizontalAlignment="Right" Margin="0,0,65,0" Grid.Row="2" VerticalAlignment="Center" Width="75" Command="{Binding EditInventoryItemCommand}"/>
+                    <ListBox Grid.Row="3" ItemsSource="{Binding FilteredInventoryItems}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Auto" SelectedItem="{Binding SelectedInventoryItem}" >
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}" Height="25" FontSize="18" Padding="2" />
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Settings">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="3*" />
+                            <ColumnDefinition Width="2*" />
+                        </Grid.ColumnDefinitions>
+                        <TextBox x:Name="textBox" HorizontalAlignment="Right" Height="25" Margin="10" TextWrapping="NoWrap" Text="{Binding DataFileFolder}" VerticalAlignment="Center" Width="180" />
+                        <Button x:Name="button" Content="Browse..." Grid.Column="1" HorizontalAlignment="Left" Margin="10" VerticalAlignment="Center" Height="25" Width="75" Command="{Binding BrowseButtonCommand}"/>
+                        <Label x:Name="label" Content="Path to data files: " HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="10" VerticalAlignment="Center"/>
+                    </Grid>
+                    <Button x:Name="button1" Content="Generate Report" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Height="25" Width="125" Command="{Binding ReportCommand}"/>
+
+                </Grid>
+            </TabItem>
+        </TabControl>
     </Grid>
-</Window>
+</Controls:MetroWindow>
