--- a/BuddhaBowls/EditItem.xaml
+++ b/BuddhaBowls/EditItem.xaml
@@ -24,7 +24,7 @@
                                 <ColumnDefinition Width="2*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Grid.Column="0" Content="{Binding Name}" Margin="0, 10, 0, 0" HorizontalAlignment="Right" VerticalAlignment="Center" HorizontalContentAlignment="Right" Height="25"/>
-                            <TextBox Grid.Column="1" Text="{Binding Value}" Margin="0, 20, 0, 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" Height="25" />
+                            <TextBox Grid.Column="1" Text="{Binding Value}" Margin="0, 20, 0, 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" Height="25" TextChanged="FieldValue_TextChanged" />
                             <Border Grid.Column="1" BorderThickness="{Binding Error}"  BorderBrush="Red" Margin="0, 20, 0, 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" Height="25" />
                         </Grid>
                     </DataTemplate>
@@ -33,6 +33,6 @@
         </ScrollViewer>
         <Button x:Name="button" Grid.Row="2" Content="Save" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0, 0, 85, 0" Width="75" Command="{Binding SaveAddEditCommand}" />
         <Button x:Name="button1" Grid.Row="2" Content="Cancel" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0, 0, 5, 0" Width="75" Command="{Binding CancelAddEditCommand}" />
-        <Label x:Name="label" Grid.Row="2" Content="{Binding AddEditErrorMessage}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0" Width="180" Height="25" Foreground="Red" />
+        <Label x:Name="label" Grid.Row="2" Content="{Binding AddEditErrorMessage}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0" Width="250" Height="25" Foreground="Red" />
     </Grid>
 </UserControl>
