--- a/BuddhaBowls/MainWindow.xaml
+++ b/BuddhaBowls/MainWindow.xaml
@@ -15,16 +15,59 @@
         <TabControl Name="Tabs">
             <TabItem Header="Orders">
                 <TabControl Name="OrdersTabs">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="1*" />
-                            <RowDefinition Height="1*" />
-                        </Grid.RowDefinitions>
-                        <Label Content="Open Orders" Grid.Row="0" />
-                        <ListBox Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0, 30" ScrollViewer.VerticalScrollBarVisibility="Auto" />
-                        <Label Content="Received Orders" Grid.Row="1" />
-                        <ListBox Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0, 30" ScrollViewer.VerticalScrollBarVisibility="Auto" />
-                    </Grid>
+                    <TabItem Header="Overview">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="1*" />
+                                <RowDefinition Height="1*" />
+                            </Grid.RowDefinitions>
+                            <Label Content="Open Orders" Grid.Row="0" />
+                            <ListBox Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0, 30" ScrollViewer.VerticalScrollBarVisibility="Auto" />
+                            <Label Content="Received Orders" Grid.Row="1" />
+                            <ListBox Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0, 30" ScrollViewer.VerticalScrollBarVisibility="Auto" />
+                        </Grid>
+                    </TabItem>
+                    <TabItem Header="New Order">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="60" />
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="60" />
+                            </Grid.RowDefinitions>
+                            <Label x:Name="label2" Content="Vendor:" HorizontalAlignment="Center" Margin="-180,25,0,0" VerticalAlignment="Top"/>
+                            <TextBox x:Name="textBox1" HorizontalAlignment="Center" Height="25" Margin="0,25,0,0" TextWrapping="Wrap" Text="{Binding OrderVendor}" VerticalAlignment="Top" Width="120"/>
+                            <Border Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="Black" BorderThickness="1" />
+                            <Grid Grid.Row="1">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="4*" />
+                                    <ColumnDefinition Width="1*" />
+                                </Grid.ColumnDefinitions>
+                                <Label x:Name="label3" Content="Item Name:" HorizontalAlignment="Center" Margin="-260,20,0,0" Grid.Column="0" VerticalAlignment="Top"/>
+                                <TextBox x:Name="FilterOrderItemBox" HorizontalAlignment="Center" Height="22" Margin="0,20,0,0" Grid.Column="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" Controls:TextBoxHelper.Watermark="Filter by item name..." TextChanged="FilterOrderItems_TextChanged" />
+                                <DataGrid x:Name="dataGrid" HorizontalAlignment="Stretch" Margin="1,60,1,1" Grid.Column="0"
+                                          ItemsSource="{Binding FilteredInventoryItems}" VerticalAlignment="Stretch"
+                                          ScrollViewer.VerticalScrollBarVisibility="Auto" SelectedItem="{Binding SelectedOrderItem}"
+                                          AutoGenerateColumns="False">
+                                    <DataGrid.Columns>
+                                        <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="3*"/>
+                                        <DataGridTextColumn Header="Category" Binding="{Binding Category}" Width="3*"/>
+                                        <Controls:DataGridNumericUpDownColumn Header="Order Amt" Binding="{Binding LastOrderedAmount}" StringFormat="0.##" Width="2*" />
+                                        <Controls:DataGridNumericUpDownColumn Header="Price" Binding="{Binding LastPurchasedPrice}" StringFormat="c" Width="2*" />
+                                        <Controls:DataGridNumericUpDownColumn Header="Extention" Binding="{Binding LastPurchasedPrice}" StringFormat="c" Width="2*" />
+                                    </DataGrid.Columns>
+                                </DataGrid>
+                                <Border Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="1" BorderBrush="Black" />
+                                <Label x:Name="label4" Grid.Column="1" Content="Total:" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="20, 5"/>
+                                <TextBlock Grid.Column="1" Text="{Binding Path=OrderTotal, StringFormat=C}" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="70, 5"/>
+                                <TextBlock x:Name="textBlock1" Grid.Column="1" HorizontalAlignment="Center" Margin="0,5,0,0" TextWrapping="NoWrap" Text="Price Breakdown" VerticalAlignment="Top" FontSize="18"/>
+                                <StackPanel Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0, 30, 0, 30">
+                                    <ItemsControl ItemsSource="{Binding PriceBreakdown}">
+                                        <TextBlock Background="{Binding Background}" Text="{Binding Name}" HorizontalAlignment="Stretch" />
+                                    </ItemsControl>
+                                </StackPanel>
+                            </Grid>
+                        </Grid>
+                    </TabItem>
                 </TabControl>
             </TabItem>
             <TabItem Header="Invetory">
@@ -34,11 +77,11 @@
                         <RowDefinition Height="60" />
                         <RowDefinition Height="30" />
                         <RowDefinition Height="*" />
+                        <RowDefinition Height="30" />
                     </Grid.RowDefinitions>
                     <TextBlock x:Name="textBlock" Grid.Row="0" Margin="0" Text="Inventory" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30"/>
                     <TextBox x:Name="FilterItemBox" Grid.Row="1" Text="{Binding FilterText}" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="25"  Width="200" Controls:TextBoxHelper.Watermark="Filter by item name..." TextChanged="FilterItems_TextChanged" />
                     <Label x:Name="label1" Grid.Row="1" Content="Inventory Item Name:" Margin="-330, 0, 0, 0" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
-                    <Label Content="Name" Grid.Row="2" />
                     <Button Grid.Row="2" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" Margin="0, 0, 35, 0" Command="{Binding AddInventoryItemCommand}">
                         <iconPacks:PackIconFontAwesome Kind="Plus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                     </Button>
@@ -46,13 +89,17 @@
                         <iconPacks:PackIconFontAwesome Grid.Row="2" Kind="Minus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                     </Button>
                     <Button x:Name="button2" Content="Edit" HorizontalAlignment="Right" Margin="0,0,65,0" Grid.Row="2" VerticalAlignment="Center" Width="75" Command="{Binding EditInventoryItemCommand}"/>
-                    <ListBox Grid.Row="3" ItemsSource="{Binding FilteredInventoryItems}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Auto" SelectedItem="{Binding SelectedInventoryItem}" >
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Name}" Height="25" FontSize="18" Padding="2" />
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
+                    <DataGrid Grid.Row="3" ItemsSource="{Binding FilteredInventoryItems}" HorizontalAlignment="Stretch"
+                              VerticalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Auto"
+                              SelectedItem="{Binding SelectedInventoryItem}" AutoGenerateColumns="False" >
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="2*"/>
+                            <DataGridTextColumn Header="Category" Binding="{Binding Category}" Width="1*"/>
+                            <Controls:DataGridNumericUpDownColumn Header="Count" Binding="{Binding Count}" StringFormat="0.##" Width="1*" />
+                        </DataGrid.Columns>
+                    </DataGrid>
+                    <Button Grid.Row="4" Height ="25" Width="80" Content="Save" HorizontalAlignment="Right" Margin="5, 0" Command="{Binding SaveCountCommand}" />
+                    <Button Grid.Row="4" Height ="25" Width="80" Content="Reset" HorizontalAlignment="Right" Margin="85, 0" Command="{Binding ResetCountCommand}" />
                 </Grid>
             </TabItem>
             <TabItem Header="Reports">
